Reading the process output as we go along